<resources>
    <string name="app_name">Cows Are Ruminants</string>
    <string name="action_settings">Settings</string>
    <string name="coming_soon">App coming soon. Stay tuned!</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="worry_tool_title">Worry Practice</string>
    <string name="question_rumination_bool">Are you ruminating?</string>
    <string name="question_rumination_trigger">What happened before the rumination started?</string>
    <string name="question_pre_rumination_feeling">How did you feel at the time?</string>
    <string name="emo_one">Emo1</string>
    <string name="emo_two">Emo2</string>
    <string name="emo_three">Emo3</string>
    <string name="question_rumination_duration">How long did the rumination last?</string>
    <string name="question_rumination_strategy">What did you try?</string>
    <string name="question_strategy_success">What stopped the rumination?</string>
    <string name="timer_title">Time Remaining:</string>
    <string name="reset_wpt">Reset</string>
    <string name="start_wpt">Start</string>
    <string name="stop_wpt">Stop</string>
    <string name="timeup">Done!</string>
    <string name="show_help">Learn about Rumination</string>
    <string name="question_ruminating">Ruminating? Click here!</string>
    <string name="tool_didactic_content">Strategies</string>
    <string name="desc_didactic_content">Learn how to manage worries</string>
    <string name="tool_survey_wizard">Rumination Diary</string>
    <string name="desc_survey_wizard">Describe your worries</string>
    <string name="tool_worry_practice">Worry Practice Tool</string>
    <string name="desc_worry_practice">A technique to exhaust rumination</string>
    <string name="tool_replay_intro">Replay Intro</string>
    <string name="desc_replay_intro">Replay the introduction to Bessie.</string>
    <string name="wizards_button">Wizards</string>
    <string name="replay_intro_button">Replay Intro</string>
    <string name="replay_intro">Replay Intro</string>
    <string name="survey_wizard_title">Logging</string>
    <string name="hint_comments">It\'s ok to be general</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_a_few_min">A Few Minutes</string>
    <string name="label_thirty_min">30 Minutes</string>
    <string name="label_an_hour">An Hour</string>
    <string name="label_a_few_hours">A Few Hours</string>
    <string name="label_all_day">All Day</string>
    <string name="action_save_survey">Submit</string>
    <string name="action_save_recall">Submit</string>
    <string name="message_complete_rum">Record if you are ruminating now to continue.</string>
    <string name="message_complete_rum_duration">Answer how long your rumination lasted.</string>
    <string name="message_complete_helpful">Record if the rumination was helpful.</string>
    <string name="message_complete_better">Record if the rumination made you feel better.</string>
    <string name="toast_survey_wizard_recorded">Successfully submitted.</string>
    <string name="toast_recall_wizard_recorded">Successfully submitted.</string>
    <string name="wpt_instructions">Press \"Start\" to begin the timer; then concentrate exclusively on your worries. When the timer stops, stop concentrating.</string>
    <string name="message_complete_emo">Select an emotion</string>
    <string name="timer">wpt countdown</string>
   <string-array name="intro_titles">
        <item>Meet Bessie</item>
        <item>Bessie is our friend</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="pun_bank">
        <item>rumination - udderly unfun</item>
        <item>MOO-ve worries along</item>
        <item>improve your MOO-od</item>
        <item>lasso good thoughts</item>
        <item>stampede over rumination</item>
        <item>re-MOO-ve worries</item>
        <item>hay-nt time for worries</item>
        <item>chew on this idea</item>
        <item>my beef is with worrying</item>
        <item>field rumination</item>
        <item>fence in rumination</item>
        <item>let bessie figure it out</item>
        <item>ok to say "no MOO-ore"</item>
        <item>herd about worry practice?</item>
        <item>let thoughts range free</item>
        <item>hoof it towards happiness</item>
        <item>empty your fourth stomach</item>
        <item>It works!</item>
    </string-array>
    <string-array name="intro_content">
        <item>People (like cows) are creatures of habit.</item>
        <item>They live their lives, doing, thinking, feeling…</item>
        <item>But, sometimes, when you start thinking about something…</item>
        <item>Then you think about it again…</item>
        <item>And again…</item>
        <item>And after all that thinking you start to feel worried…</item>
        <item>Or stressed…</item>
        <item>That’s when you know you’re ruminating.</item>
        <item>Rumination can be very difficult to manage.</item>
        <item>We’ll show you a few basic strategies on how to help with this.</item>
        <item>Now… let’s begin.</item>
    </string-array>
    <string-array name="didactic_content1">
        <item>Distract with books, movies, magazines, museums, a busy street or bustling park. Force yourself to take these aspects of life or culture in even if you don’t feel like it. Once you are involved your mind has a chance to take another path.</item>
        <item>Repeat the saying: “Grant me the serenity to accept the things I cannot change; change the things I can and wisdom to know the difference.”</item>
        <item>Repeat a comforting phrase, an affirmation, a prayer, a poem or a song to yourself. </item>
        <item>Exercise or walk. Moving your body can move the content in your head. Notice aspects of nature or humanity that are larger than your conundrum. Try to focus on what is outside of you rather than inside of you.</item>
        <item>If you are “catastrophizing” or “awfulizing,” think of all the times you were sure a horror would happen and it didn’t. Turning a hysterical assumption into an objective assessment can take away pain and calm you. Write down what you fear, the worst thing that can happen, and then write down three more positive outcomes. Try to figure out what is most realistic. Try to be measured.        </item>
    </string-array>
    <string-array name="didactic_content2">
        <item>Count your blessings instead of sheep, in the words of composer Irving Berlin. Research shows that a grateful person is a happy person.</item>
        <item>Listen to music that has meaning for you or provides comfort, from your childhood or current times. Get swept up. Sing, dance or clean the car with the radio blasting Rolling Stones. Whatever.        </item>
        <item>Listen to radio programs that tells compelling stories about people who have undergone unusual struggles and triumphs. Watch a comedy channel.</item>
        <item>Make arrangements to meet a good friend who can be relied upon to have a sensitive response or to make you laugh.</item>
        <item>Trade heaviness for lightness even if that somehow feels wrong or unnatural or strange.</item>
    </string-array>
    <string-array name="didactic_content3">
        <item>Re-write the narrative. Sometimes if we can find a way to soften the story, minimize the blows, tell ourselves that the injury is really not going to damage us, it restores a sense of empowerment and equilibrium. It also removes power from the perpetrator.</item>
        <item>Say, “Don’t think, don’t think, don’t think…” and then DO something: cook, scrub, fix, run, go somewhere and be around other people. Do a small project.</item>
        <item>Gear up into high action: Accomplish more that you think you can, want to, or than you need. Get five things done instead of three. It might give you a rush. Get a little manic, in a good way.        </item>
        <item>Think about someone you know who is suffering and feel compassion. Call them or send them a message.</item>
    </string-array>
    <string-array name="didactic_content4">
        <item>Take a boxing class if meditation does not work for you. Some people need to punch it out. My friend Betty wears pink boxing gloves to support breast cancer research.</item>
        <item>Don’t hang out with a demon filled head.</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
    </string-array>
    <string-array name="didactic_content5">
        <item>Re-write the narrative. Sometimes if we can find a way to soften the story, minimize the blows, tell ourselves that the injury is really not going to damage us, it restores a sense of empowerment and equilibrium. It also removes power from the perpetrator.</item>
        <item>Say, “Don’t think, don’t think, don’t think…” and then DO something: cook, scrub, fix, run, go somewhere and be around other people. Do a small project.</item>
        <item>Gear up into high action: Accomplish more that you think you can, want to, or than you need. Get five things done instead of three. It might give you a rush. Get a little manic, in a good way.        </item>
        <item>Think about someone you know who is suffering and feel compassion. Call them or send them a message.</item>
    </string-array>
    <string-array name="didactic_content6">
        <item>Re-write the narrative. Sometimes if we can find a way to soften the story, minimize the blows, tell ourselves that the injury is really not going to damage us, it restores a sense of empowerment and equilibrium. It also removes power from the perpetrator.</item>
        <item>Say, “Don’t think, don’t think, don’t think…” and then DO something: cook, scrub, fix, run, go somewhere and be around other people. Do a small project.</item>
        <item>Gear up into high action: Accomplish more that you think you can, want to, or than you need. Get five things done instead of three. It might give you a rush. Get a little manic, in a good way.        </item>
        <item>Think about someone you know who is suffering and feel compassion. Call them or send them a message.</item>
    </string-array>
    <string-array name="didactic_content7">
        <item>Re-write the narrative. Sometimes if we can find a way to soften the story, minimize the blows, tell ourselves that the injury is really not going to damage us, it restores a sense of empowerment and equilibrium. It also removes power from the perpetrator.</item>
        <item>Say, “Don’t think, don’t think, don’t think…” and then DO something: cook, scrub, fix, run, go somewhere and be around other people. Do a small project.</item>
        <item>Gear up into high action: Accomplish more that you think you can, want to, or than you need. Get five things done instead of three. It might give you a rush. Get a little manic, in a good way.        </item>
        <item>Think about someone you know who is suffering and feel compassion. Call them or send them a message.</item>
    </string-array>
    <string name="question_rumination_content">What have you been ruminating about?</string>
    <string name="question_help_frequency">How often would you like help?</string>
    <string name="times_per_day">time(s) per day</string>
</resources>