<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_rumination_bool"
                android:textColor="#0099cc"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp" />
        <RadioGroup android:id="@+id/radios_ruminating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp">
            <RadioButton android:id="@+id/rum_yes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_yes"
                android:textSize="18sp" />
            <RadioButton android:id="@+id/rum_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_no"
                android:textSize="18sp" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_rumination_trigger"
            android:textColor="#0099cc"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp" />
        <EditText android:id="@+id/field_trigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:singleLine="false"
            android:hint="@string/hint_comments"/>
            <TextView android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_pre_rumination_feeling"
                android:textColor="#0099cc"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="6dp" />
        <RadioGroup android:id="@+id/radios_emotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp">
            <RadioButton android:id="@+id/emotion_one"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/emo_one"
                android:textSize="18sp" />
            <RadioButton android:id="@+id/emotion_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/emo_two"
            android:textSize="18sp" />
            <RadioButton android:id="@+id/emotion_three"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/emo_three"
                android:textSize="18sp" />
        </RadioGroup>
            <TextView android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_rumination_duration"
                android:textColor="#0099cc"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="6dp" />
        <SeekBar android:id="@+id/field_rumination_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="0dp" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp">
        <TextView android:text="@string/label_a_few_min"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="left" />

        <TextView android:text="@string/label_all_day"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_gravity="center_horizontal" />

        </LinearLayout>

            <TextView android:id="@+id/label_rumination_duration"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_rumination_strategy"
            android:textColor="#0099cc"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="8dp" />
        <EditText android:id="@+id/field_attempted_stop_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:singleLine="false"
            android:hint="@string/hint_comments"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_strategy_success"
            android:textColor="#0099cc"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp" />
        <EditText android:id="@+id/field_termination_cause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            android:inputType="text"
            android:singleLine="false"
            android:hint="@string/hint_comments"/>
    </LinearLayout>
</ScrollView>
