<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timer_title"
        android:id="@+id/textView2"
        android:gravity="left"
        android:layout_marginBottom="6dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/timer_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:textSize="96sp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:minHeight="144dp"
            android:background="#669900"
            android:layout_gravity="center|right"
            android:gravity="center_horizontal|right"
            android:minWidth="108dp"
            android:paddingLeft="36dp" />
        <TextView
            android:id="@+id/timer_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="96sp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:minHeight="144dp"
            android:background="#669900"
            android:layout_gravity="center|left"
            android:gravity="center_horizontal|left"
            android:minWidth="144dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_wpt"
            android:id="@+id/start_button"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_wpt"
            android:id="@+id/reset_button"
            android:minWidth="48dp"
            android:minHeight="48dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_help"
        android:id="@+id/didactic_button"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bessie_placeholder" />

</LinearLayout>